crates/store/re_tf/src/snapshots/re_tf__transform_forest__tests__simple_entity_hierarchy__transform_from_to__top.snap
---
source: crates/store/re_tf/src/transform_forest.rs
expression: "pretty_print_transform_frame_ids_in(&result, &transform_cache)"
---
[
    (
        tf#/,
        Ok(
            TransformInfo {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        -1.0,
                        0.0,
                        0.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                1.0,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                1.0,
                            ),
                        },
                        translation: DVec3(
                            -1.0,
                            0.0,
                            0.0,
                        ),
                    },
                ],
            },
        ),
    ),
    (
        tf#/top,
        Ok(
            TransformInfo {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        0.0,
                        0.0,
                        0.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                1.0,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                1.0,
                            ),
                        },
                        translation: DVec3(
                            10.0,
                            0.0,
                            0.0,
                        ),
                    },
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                1.0,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                1.0,
                            ),
                        },
                        translation: DVec3(
                            20.0,
                            0.0,
                            0.0,
                        ),
                    },
                ],
            },
        ),
    ),
    (
        tf#/top/pinhole,
        Ok(
            TransformInfo {
                root: tf#/top/pinhole,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.5,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.6666666666666666,
                        ),
                    },
                    translation: DVec3(
                        -50.0,
                        -49.0,
                        1.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                0.5,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                0.6666666666666666,
                            ),
                        },
                        translation: DVec3(
                            -50.0,
                            -49.0,
                            1.0,
                        ),
                    },
                ],
            },
        ),
    ),
    (
        tf#/top/child3d,
        Ok(
            TransformInfo {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        0.0,
                        0.0,
                        1.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                1.0,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                1.0,
                            ),
                        },
                        translation: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                ],
            },
        ),
    ),
    (
        TransformFrameIdHash(D01893A02DC02A5F),
        Err(
            UnknownSourceFrame(
                TransformFrameIdHash(D01893A02DC02A5F),
            ),
        ),
    ),
    (
        tf#/top/pinhole/child2d,
        Ok(
            TransformInfo {
                root: tf#/top/pinhole,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.5,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.6666666666666666,
                        ),
                    },
                    translation: DVec3(
                        -48.0,
                        -49.0,
                        1.0,
                    ),
                },
                target_from_instances: [
                    DAffine3 {
                        matrix3: DMat3 {
                            x_axis: DVec3(
                                1.0,
                                0.0,
                                0.0,
                            ),
                            y_axis: DVec3(
                                0.0,
                                0.5,
                                0.0,
                            ),
                            z_axis: DVec3(
                                0.0,
                                0.0,
                                0.6666666666666666,
                            ),
                        },
                        translation: DVec3(
                            -48.0,
                            -49.0,
                            1.0,
                        ),
                    },
                ],
            },
        ),
    ),
]
