crates/store/re_tf/src/snapshots/re_tf__transform_forest__tests__simple_entity_hierarchy__transform_from_to__top_nonexistent.snap
---
source: crates/store/re_tf/src/transform_forest.rs
expression: "pretty_print_transform_frame_ids_in(&result, &all_transform_frame_ids)"
---
[
    (
        tf#/,
        Err(
            UnknownTargetFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
    (
        tf#/top,
        Err(
            UnknownTargetFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
    (
        tf#/top/pinhole,
        Err(
            UnknownTargetFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
    (
        tf#/top/child3d,
        Err(
            UnknownTargetFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
    (
        tf#/top/nonexistent,
        Err(
            UnknownTargetFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
    (
        tf#/top/pinhole/child2d,
        Err(
            UnknownTargetFrame(
                tf#/top/nonexistent,
            ),
        ),
    ),
]
